--- a/app/src/main/res/layout/listview_bacsy.xml
+++ b/app/src/main/res/layout/listview_bacsy.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="10dp"
     tools:context="app.project.sinsin.project.ListViewActivity">
 
     <ImageView
@@ -23,7 +20,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvTenBacSy"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Sin Sin"
@@ -36,22 +33,22 @@
             android:padding="0dp">
 
             <Button
-                android:id="@+id/call"
+                android:id="@+id/btnGoi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginBottom="0dp"
                 android:src="@drawable/call"
-                android:text="GỌI"/>
+                android:text="GỌI" />
 
             <Button
-                android:id="@+id/mail"
+                android:id="@+id/btnMail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginLeft="5dp"
-                android:text="EMAIL"
-                android:src="@drawable/mail" />
+                android:src="@drawable/mail"
+                android:text="EMAIL" />
 
 
         </LinearLayout>
