--- a/app/src/main/res/layout/activity_them_nhat_ky.xml
+++ b/app/src/main/res/layout/activity_them_nhat_ky.xml
@@ -1,54 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:subtitle="Them Nhat Ky"
-        android:theme="?attr/actionBarTheme"
-        app:theme="@style/ThemeToolbar">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:background="@null"
-            android:text="SAVE"
-            android:textColor="#fff"
-            android:textSize="12sp" />
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:subtitle="Them Nhat Ky"
+            android:theme="?attr/actionBarTheme"
+            app:theme="@style/ThemeToolbar">
+
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:background="@null"
+                android:text="SAVE"
+                android:textColor="#fff"
+                android:textSize="12sp" />
 
 
-        />
+            />
 
 
-    </android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>
 
-    <EditText
-        android:id="@+id/editTextTieuDe"
-        android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/editTextTieuDe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Tiêu đề bài viê"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <EditText
+            android:id="@+id/editTextNoiDung"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.37"
+            android:ems="10"
+            android:inputType="textMultiLine" />
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Tiêu đề bài viê"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="#fff"
+        app:backgroundTint="#4298f4" />
 
-    <EditText
-        android:id="@+id/editTextNoiDung"
-        android:layout_width="match_parent"
-        android:layout_height="135dp"
-        android:layout_weight="0.37"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+    <include layout="@layout/open_fab_button" />
 
-</LinearLayout>
+</FrameLayout>
