--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorPrimary">#D81B60</color>
+    <color name="colorPrimaryDark">#C2185B</color>
+    <color name="colorAccent">#fff</color>
+    <color name="colorFabButton1">#009688</color>
+    <color name="colorFabButton3">#FDD835</color>
+    <color name="colorFabButton2">#E53935</color>
+    
+    <color name="textColorPrimary">#fff</color>
+
+
 </resources>
