--- a/app/src/main/res/layout/activity_bai_viet.xml
+++ b/app/src/main/res/layout/activity_bai_viet.xml
@@ -16,10 +16,9 @@
         app:theme="@style/ThemeToolbar"/>
 
     <WebView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/noiDung">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webview">
 
     </WebView>
 
