--- a/app/src/main/res/layout/listview_bacsy.xml
+++ b/app/src/main/res/layout/listview_bacsy.xml
@@ -24,13 +24,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Sin Sin"
-            android:textSize="20sp" />
+            android:paddingLeft="16dp"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:padding="0dp">
+
+            android:paddingLeft="16dp">
 
             <Button
                 android:id="@+id/btnGoi"
@@ -39,6 +40,8 @@
                 android:layout_gravity="right"
                 android:layout_marginBottom="0dp"
                 android:src="@drawable/call"
+                android:textColor="@color/background"
+                android:backgroundTint="@color/background_button"
                 android:text="GỌI" />
 
             <Button
@@ -47,7 +50,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginLeft="5dp"
+
                 android:src="@drawable/mail"
+                android:textColor="@color/background"
+                android:backgroundTint="@color/background_button"
                 android:text="EMAIL" />
 
 
