--- a/app/src/main/res/layout/activity_them_nhat_ky.xml
+++ b/app/src/main/res/layout/activity_them_nhat_ky.xml
@@ -47,6 +47,12 @@
             android:hint="Tiêu đề bài viê"
             android:inputType="textPersonName"
             android:text="Name" />
+        <ImageView
+            android:id="@+id/imgNhatKy"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher"/>
 
         <EditText
             android:id="@+id/editTextNoiDung"
@@ -54,7 +60,10 @@
             android:layout_height="match_parent"
             android:layout_weight="0.37"
             android:ems="10"
-            android:inputType="textMultiLine" />
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:text="Diary content here"/>
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
