--- a/app/src/main/res/layout/listview_bacsy.xml
+++ b/app/src/main/res/layout/listview_bacsy.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView"
         android:layout_width="80dp"
         android:layout_height="70dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/doc" />
 
     <LinearLayout
         android:layout_width="match_parent"
