--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/activity_list_bai_viet"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="app.project.sinsin.project.content.ListBaiViet">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -15,12 +18,8 @@
         android:subtitle="BaiViet"
         app:theme="@style/ThemeToolbar"/>
 
-    <WebView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webview">
-
-    </WebView>
-
-
+        android:id="@+id/listBaiViet1" />
 </LinearLayout>
