--- a/app/src/main/res/layout/activity_them_nhat_ky.xml
+++ b/app/src/main/res/layout/activity_them_nhat_ky.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,8 +33,6 @@
                 android:text="SAVE"
                 android:textColor="#fff"
                 android:textSize="12sp" />
-
-
             />
 
 
@@ -42,27 +41,35 @@
         <EditText
             android:id="@+id/editTextTieuDe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/custom_edittext"
             android:ems="10"
             android:hint="Tiêu đề bài viê"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:paddingLeft="5dp"
+
+             />
+
         <ImageView
             android:id="@+id/imgNhatKy"
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher" />
 
         <EditText
             android:id="@+id/editTextNoiDung"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
             android:layout_weight="0.37"
+            android:hint="Tiêu đề bài viê"
+            android:background="@drawable/custom_edittext"
             android:ems="10"
             android:gravity="top"
             android:inputType="textMultiLine"
-            android:text="Diary content here"/>
+            android:padding="5dp" />
 
     </LinearLayout>
 
