--- a/app/src/main/res/layout/listview_nhatky.xml
+++ b/app/src/main/res/layout/listview_nhatky.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:paddingLeft="10dp"
         android:gravity="center_vertical">
 
