--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -17,5 +17,5 @@
     <item
         android:id="@+id/action_item4"
         android:icon="@drawable/mail"
-        android:title="MÓN ĂN" />
+        android:title="VIDEO" />
 </menu>
