--- a/app/src/main/assets/css/style.css
+++ b/app/src/main/assets/css/style.css
@@ -15,6 +15,7 @@ body{
         margin-top:15px;
         }
         p{
+        margin-left:10px;
         margin-top:1px;
         padding-top:0px 10px;
         }
