--- a/app/src/main/res/layout/activity_them_nhat_ky.xml
+++ b/app/src/main/res/layout/activity_them_nhat_ky.xml
@@ -30,7 +30,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
                 android:background="@null"
-                android:text="SAVE"
+                android:text="THÊM"
                 android:textColor="#fff"
                 android:textSize="12sp" />
             />
@@ -45,7 +45,8 @@
             android:layout_margin="5dp"
             android:background="@drawable/custom_edittext"
             android:ems="10"
-            android:hint="Tiêu đề bài viê"
+            android:hint="Tiêu đề bài viết"
+            android:textSize="16dp"
             android:inputType="textPersonName"
             android:paddingLeft="5dp"
 
@@ -56,7 +57,7 @@
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/image" />
 
         <EditText
             android:id="@+id/editTextNoiDung"
@@ -64,7 +65,8 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="0.37"
-            android:hint="Tiêu đề bài viê"
+            android:hint="Nội dung nhật ký"
+            android:textSize="16dp"
             android:background="@drawable/custom_edittext"
             android:ems="10"
             android:gravity="top"
