--- a/app/src/main/res/layout/fragment_item_4.xml
+++ b/app/src/main/res/layout/fragment_item_4.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="10dp"
         android:textSize="15sp"
         android:layout_marginBottom="10dp"
-        android:text="VIDEO SU PHAT TRIEN THEO TUAN"
+        android:text="VIDEO SỰ PHÁT TRIỂN CỦA THAI NHI THEO TUẦN"
         android:textAlignment="center"/>
 
     <WebView
