--- a/app/src/main/res/layout/fragment_item_4.xml
+++ b/app/src/main/res/layout/fragment_item_4.xml
@@ -26,8 +26,8 @@
 
     <WebView
         android:id="@+id/webViewVideo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
     </WebView>
 </LinearLayout>
